# cubegroup

./: Cargo.toml  LICENSE  README.md
examples/: cosolve.rs  cotest.rs  eogen.rs  eosolve.rs  eotest.rs  findidentity.rs  idfs.rs  idfs2.rs  showmove.rs  showpos.rs
src/: corners.rs  dr.rs  edges.rs  internal_macros.rs  lib.rs  main.rs  simd_util.rs  speffz.rs  turns.rs
src/corners/: corners_array.rs  corners_convert.rs  corners_neon.rs
src/edges/: edges_array.rs  edges_convert.rs  edges_neon.rs
