[package]
name = "cubegroup"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
autoexamples = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["aarch64_simd", "derive", "must_cast"] }
forward_ref_generic = "0.2.1"
itertools = "0.14.0"

[features]
array = []

[dev-dependencies]
clap = "4.6.1"
